--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,11 @@ SET(PLATFORM linux)
 
 SET(${PROJECT_NAME}_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin)
 
-SET(LIBS_DIR ${${PROJECT_NAME}_SOURCE_DIR}/lib)
-SET(EXE_DIR ${${PROJECT_NAME}_SOURCE_DIR}/bin)
+# SET(LIBS_DIR ${${PROJECT_NAME}_SOURCE_DIR}/lib)
+# SET(EXE_DIR ${${PROJECT_NAME}_SOURCE_DIR}/bin)
 
-SET(LIBRARY_OUTPUT_PATH ${LIBS_DIR})
-SET(EXECUTABLE_OUTPUT_PATH ${EXE_DIR})
+# SET(LIBRARY_OUTPUT_PATH ${LIBS_DIR})
+# SET(EXECUTABLE_OUTPUT_PATH ${EXE_DIR})
 
 INCLUDE_DIRECTORIES(
 	${${PROJECT_NAME}_SOURCE_DIR}/include
@@ -22,7 +22,7 @@ INCLUDE_DIRECTORIES(
 LINK_DIRECTORIES(${LIBS_DIR} /usr/local/lib /usr/lib /lib)
 
 OPTION(WITH_PTHREADS "Build with pthreads" YES)
-OPTION(WITH_XINE "Build with xine player" YES)
+OPTION(WITH_XINE "Build with xine player" NO)
 OPTION(WITH_FFMPEG "Build with ffmpeg" NO)
 OPTION(WITH_VLC "Build with vlc" NO)
 OPTION(WITH_SDL "Build with SDL system backend" YES)
