find pthread with cmake module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,13 +28,19 @@ SET(${PROJECT_NAME}_SOURCES
 
 SET(${PROJECT_NAME}_LIBRARIES m)
 
-IF(WITH_PTHREADS)
-	SET(${PROJECT_NAME}_LIBRARIES ${${PROJECT_NAME}_LIBRARIES} pthread)
-ENDIF(WITH_PTHREADS)
+INCLUDE(FindThreads)
+IF(CMAKE_HAVE_THREADS_LIBRARY AND WITH_PTHREADS)
+	SET(${PROJECT_NAME}_LIBRARIES ${${PROJECT_NAME}_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
+	FIND_PATH(PTHREAD_INCLUDE_DIR pthread.h
+		HINTS
+			ENV PTHREADDIR
+		PATH_SUFFIXES include
+	)
+ENDIF(CMAKE_HAVE_THREADS_LIBRARY AND WITH_PTHREADS)
 
 IF(WITH_XINE)
 	FIND_LIBRARY(XINE_LIB xine PATHS
-		/usr/aviq/lib
 		/usr/local/lib
 		/usr/lib
 	)
@@ -114,7 +120,7 @@ IF(WITH_CAIRO)
 		/usr/lib
 	)
 
-	find_path(CAIRO_INCLUDE_DIR cairo.h
+	FIND_PATH(CAIRO_INCLUDE_DIR cairo.h
 		HINTS
 			ENV CAIRODIR
 		PATH_SUFFIXES include/cairo include
@@ -127,6 +133,7 @@ INCLUDE_DIRECTORIES(
 	${${PROJECT_NAME}_SOURCE_DIR}/include
 	${CAIRO_INCLUDE_DIR}
 	${SDL_INCLUDE_DIR}
+	${PTHREAD_INCLUDE_DIR}
 	/usr/include
 	/usr/local/include
 )
