--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,10 +118,18 @@ IF(WITH_CAIRO)
 	SET(${PROJECT_NAME}_LIBRARIES ${${PROJECT_NAME}_LIBRARIES} ${LIB_CAIRO} "-L${CMAKE_INSTALL_PREFIX}/lib -lpixman-1" "-lfreetype -lz -lpng")
 ENDIF(WITH_CAIRO)
 
+
+INCLUDE(FindX11)
+IF(X11_FOUND)
+	ADD_DEFINITIONS(-DWITH_X11)
+	SET(${PROJECT_NAME}_LIBRARIES ${${PROJECT_NAME}_LIBRARIES} ${X11_Xv_LIB})
+ENDIF(X11_FOUND)
+
 INCLUDE_DIRECTORIES(
 	${${PROJECT_NAME}_SOURCE_DIR}/include
 	${CAIRO_INCLUDE_DIR}
 	${SDL_INCLUDE_DIR}
+	${X11_Xv_INCLUDE_PATH}
 	/usr/include
 	/usr/local/include
 )
