--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,5 +3,6 @@ add_executable(test_avgl
     test_avgl.c
     test_oop.c
     test_window.c
+    test_widgets.c
 )
 target_link_libraries (test_avgl avgl)
